<resources>
    <string name="app_name">Eywin Todo Task</string>
    <string name="tap_to_add_todo_note">Tap to add todo note.</string>
    <string name="exit">Exit</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_hint">Homework</string>
    <string name="description_hint">"Submit the group project "</string>
</resources>