<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/dp24"
    tools:context=".ui.dialog.DialogActivity">

    <TextView
        android:id="@+id/tv_add_task"
        style="@style/PrimaryHeaderStyle"
        android:text="@string/add_task" />

    <EditText
        android:id="@+id/et_title"
        style="@style/SecondaryEdittextStyle"
        android:layout_marginTop="@dimen/dp24"
        android:inputType="text"
        android:hint="@string/task_title" />

    <EditText
        android:id="@+id/et_description"
        style="@style/SecondaryEdittextStyle"
        android:inputType="textMultiLine"
        android:hint="@string/task_description" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/dp25"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/bt_cancel"
        android:backgroundTint="@android:color/white"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray4"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/cancel" />
    <Button
        android:id="@+id/bt_add"
        android:backgroundTint="@android:color/white"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/add" />


</RelativeLayout>

</LinearLayout>